# cpp-jetbrains-reset-trial

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.github/: README.md
.github/workflows/: build.yml  linux.yml  windows.yml
src/: main.cpp  stdafx.h
